Switch back to HOME

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
       - run:
           name: Auth Google Cloud k8s
           command: |
-            echo $GCLOUD_SERVICE_KEY > $GOOGLE_APPLICATION_CREDENTIALS
-            sudo gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
+            echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+            sudo gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
             sudo gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
             sudo gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
             sudo gcloud gcloud container clusters get-credentials gymio-cluster
