Use envsubst instead of sed

--- a/deployment/gymio-deployment.yaml
+++ b/deployment/gymio-deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: gymio
-          image: XXX_IMAGE
+          image: gcr.io/gymio-220023/$CIRCLE_PROJECT_REPONAME:$CIRCLE_PROJECT_USERNAME-$CIRCLE_BRANCH-$CIRCLE_SHA1
           ports:
             - containerPort: 8080
