Create gcloud db proxy secrets

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,16 @@ jobs:
       - run:
           name: Deploy to k8s
           command: |
+            # Provision
             envsubst < deployment/gymio-deployment.yaml > deployment/gymio-deployment-rendered.yaml
+
+            # Create secrets
+            kubectl create secret generic cloudsql-instance-credentials \
+              --from-file=credentials.json=$GYMIO_DB_SERVICE_ACCOUNT
+            kubectl create secret generic cloudsql-db-credentials \
+              --from-literal=username=$GYMIO_DB_USER --from-literal=password=$GYMIO_DB_PASSWORD
+
+            # Deployment and service
             kubectl apply -f deployment/gymio-deployment-rendered.yaml
             kubectl apply -f deployment/gymio-service.yaml
+
