--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,8 +45,11 @@ jobs:
             echo $GYMIO_DB_SERVICE_ACCOUNT > ${HOME}/gcloud-gymio-db-service-key.json
 
             # Create secrets
+            kubectl delete secret cloudsql-instance-credentials --ignore-not-found
             kubectl create secret generic cloudsql-instance-credentials \
               --from-file=credentials.json=${HOME}/gcloud-gymio-db-service-key.json
+
+            kubectl delete secret cloudsql-db-credentials --ignore-not-found
             kubectl create secret generic cloudsql-db-credentials \
               --from-literal=username="$GYMIO_DB_USER" --from-literal=password="$GYMIO_DB_PASSWORD"
 
