--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,9 +8,9 @@ slick {
     db = ${?DB_NAME}
     url = "jdbc:postgresql://"${slick.db.host}":5432/"${slick.db.db}"?reWriteBatchedInserts=true"
     user = "postgres"
-    user = ${?GYMIO_DB_USER}
+    user = ${?DB_USER}
     password = ""
-    password = ${?GYMIO_DB_PASSWORD}
+    password = ${?DB_PASSWORD}
     driver = "org.postgresql.Driver"
     connectionTestQuery = "SELECT 1"
   }
