--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,19 @@
 sudo: required
-
 language: scala
-
 services:
   - docker
-
 before_install:
+  - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in ci/travis-secret-tar.enc -out travis-secret-tar -d
+  - tar xvf travis-secret.tar
   - bash ci/auth_cloud.sh ${GCLOUD_SERVICE_ACCOUNT}
-
 stages:
   - build
   - deploy
-
 jobs:
   include:
-    - name: "Build Docker"
+    - name: Build Docker
       stage: build
       script: bash ci/build_and_push_docker.sh ${TRAVIS_BRANCH} ${TRAVIS_COMMIT}
-    - name: "Deploy to k8s"
+    - name: Deploy to k8s
       stage: deploy
       script: bash ci/deploy_k8s.sh ${GYMIO_DB_SERVICE_ACCOUNT} ${GYMIO_DB_USER} ${GYMIO_DB_PASSWORD}
