Update ENV vars to secret

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before_install:
   - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in ci/travis-secret-tar.enc -out travis-secret-tar -d
   - tar xvf travis-secret.tar
-  - bash ci/auth_cloud.sh ${GCLOUD_SERVICE_ACCOUNT}
+  - bash ci/auth_cloud.sh circle-ci-serviceaccount.json
 stages:
   - build
   - deploy
@@ -16,4 +16,4 @@ jobs:
       script: bash ci/build_and_push_docker.sh ${TRAVIS_BRANCH} ${TRAVIS_COMMIT}
     - name: Deploy to k8s
       stage: deploy
-      script: bash ci/deploy_k8s.sh ${GYMIO_DB_SERVICE_ACCOUNT} ${GYMIO_DB_USER} ${GYMIO_DB_PASSWORD}
+      script: bash ci/deploy_k8s.sh postgres-serviceaccount.json ${GYMIO_DB_USER} ${GYMIO_DB_PASSWORD}
