--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 before_install:
   - ls
-  - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in ci/travis-secret-tar.enc -out travis-secret-tar -d
+  - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in travis-secret-tar.enc -out travis-secret-tar -d
   - tar xvf travis-secret.tar
   - bash ci/auth_cloud.sh circle-ci-serviceaccount.json
 stages:
