--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ services:
   - docker
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_4b2b94f48fd2_key -iv $encrypted_4b2b94f48fd2_iv
-    -in travis-secret.tar.enc -out travis-secret.tar -d
+  - openssl aes-256-cbc -K $encrypted_76b3b19e50ea_key -iv $encrypted_76b3b19e50ea_iv -in travis-secret.tar.enc -out ~\/clusters/gcloud/gymio/travis-secret.tar -d
   - tar xvf travis-secret.tar
 
 stages:
