--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
 before_install:
   - openssl aes-256-cbc -K $encrypted_76b3b19e50ea_key -iv $encrypted_76b3b19e50ea_iv -in ci/travis-secret.tar.enc -out travis-secret.tar -d
   - tar xvf travis-secret.tar
+  - bash ci/auth_gcloud.sh circle-ci-serviceaccount.json
 
 stages:
   - build
