--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 sudo: required
+
+dist: trusty
+
 language: scala
 
 services:
   - docker
 
 before_install:
+  # Install kubectl
+  - snap install kubectl --classic
+  # Get secrets
   - openssl aes-256-cbc -K $encrypted_76b3b19e50ea_key -iv $encrypted_76b3b19e50ea_iv -in ci/travis-secret.tar.enc -out travis-secret.tar -d
   - tar xvf travis-secret.tar
+  # Auth to gcloud
   - bash ci/auth_gcloud.sh circle-ci-serviceaccount.json
 
 stages:
