--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
 
 before_install:
   # Install kubectl
-  - snap install kubectl --classic
+  - bash ci/install_kubectl.sh
   # Get secrets
   - openssl aes-256-cbc -K $encrypted_76b3b19e50ea_key -iv $encrypted_76b3b19e50ea_iv -in ci/travis-secret.tar.enc -out travis-secret.tar -d
   - tar xvf travis-secret.tar
