--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ services:
   - docker
 
 # Cache our Gcloud SDK between commands
-cache:
-  directories:
-    - "$HOME/google-cloud-sdk/"
+#cache:
+#  directories:
+#    - "$HOME/google-cloud-sdk/"
 
 before_install:
   # Install dependencies
