Syntax in travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: minimal
 services:
   - docker
 
-Cache our Gcloud SDK between commands
+#Cache our Gcloud SDK between commands
 cache:
   directories:
     - "$HOME/google-cloud-sdk/"
