Forgotten branch and commit for deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,4 +45,4 @@ jobs:
       script:
         - DB_USER=$(cat config.json | jq -r '.db.user')
         - DB_PASSWORD=$(cat config.json | jq -r '.db.password')
-        - bash ci/deploy_k8s.sh postgres-serviceaccount.json ${DB_USER} ${DB_PASSWORD}
+        - bash ci/deploy_k8s.sh postgres-serviceaccount.json ${DB_USER} ${DB_PASSWORD} ${TRAVIS_BRANCH} ${TRAVIS_COMMIT}
