Move from Slick to Doobie mesh better with http4s

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,17 +1,15 @@
-slick {
+database {
   profile = "slick.jdbc.PostgresProfile$"
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
-  db {
-    host = "localhost"
-    host = ${?DB_HOST}
-    db = "gymio"
-    db = ${?DB_NAME}
-    url = "jdbc:postgresql://"${slick.db.host}":5432/"${slick.db.db}"?reWriteBatchedInserts=true"
-    user = "postgres"
-    user = ${?DB_USER}
-    password = ""
-    password = ${?DB_PASSWORD}
-    driver = "org.postgresql.Driver"
-    connectionTestQuery = "SELECT 1"
-  }
+  host = "localhost"
+  host = ${?DB_HOST}
+  db = "gymio"
+  db = ${?DB_NAME}
+  url = "jdbc:postgresql://"${database.host}":5432/"${database.db}"?reWriteBatchedInserts=true"
+  user = "postgres"
+  user = ${?DB_USER}
+  password = ""
+  password = ${?DB_PASSWORD}
+  driver = "org.postgresql.Driver"
+  connectionTestQuery = "SELECT 1"
 }
